add migrate script

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "flatsheet": "^0.9.1",
     "response": "git://github.com/mikeal/response"
+  },
+  "devDependencies": {
+    "request": "^2.54.0"
   }
 }
