--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "demo.flatsheet.io",
-  "version": "1.2.0",
-  "description": "",
+  "name": "data.seattle.io",
+  "version": "1.2.1",
+  "description": "Data portal for information related to Seattle, WA.",
   "main": "index.js",
   "scripts": {
     "flatsheet": "flatsheet",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "flatsheet": "^0.9.1",
+    "flatsheet": "^0.9.2",
     "response": "git://github.com/mikeal/response"
   },
   "devDependencies": {
